css/styles.css
/* ... */
.is-hidden {
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
}

.modal-box {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(1);
  width: 408px;
  min-height: 584px;
  flex-shrink: 0;
  border-radius: 4px;
  background: var(--DAIRY, #fcfcfc);
  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
  padding: 72px 24px 24px 24px;
}

.modal-button {
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.button-close {
  position: absolute;
  top: 24px;
  right: 24px;
  width: 24px;
  height: 24px;
  flex-shrink: 0;
  display: flex;
  border-radius: 50%;
  align-items: center;
  justify-content: center;
  background-color: #e7e9fc;
  border: 1px solid rgba(0, 0, 0, 0.1);
  padding: 0;
  cursor: pointer;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.button-close:focus,
.button-close:hover {
  background-color: #404bbf;
  border: none;
}

.button-close:hover .button-close-icon,
.button-close:focus .button-close-icon {
  fill: #ffffff;
}

.button-close-icon {
  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.paragraph-modal {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 0.02em;
  color: var(--color-section1);
  margin-bottom: 16px;
}
.div-modal-form {
  margin-bottom: 8px;
}
.label-modal {
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: #8e8f99;
  display: block;
  margin-bottom: 4px;
}
.div-modal-label {
  position: relative;
}
.input-modal {
  width: 100%;
  height: 40px;
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: 4px;
  background-color: transparent;
  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  padding-left: 38px;
  outline: transparent;
}
.input-modal:focus {
  border: 1px solid #4d5ae5;
}
.input-modal:focus + svg {
  fill: #4d5ae5;
}
.modal-icon {
  position: absolute;
  left: 16px;
  top: 50%;
  transform: translateY(-50%);
  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.div-modal-four {
  margin-bottom: 16px;
}
.textarea-modal {
  width: 100%;
  height: 120px;
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: rgba(46, 47, 66, 0.4);
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: 4px;
  background-color: transparent;
  padding: 8px 16px;
  outline: transparent;
  resize: none;
  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.textarea-modal:focus {
  border-color: #4d5ae5;
}
.textarea-modal::placeholder {
  font-weight: 400;
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: rgba(46, 47, 66, 0.4);
}

.div-modal-five {
  margin-bottom: 24px;
}
.label-modal-five {
  display: block;
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: var(--section-five);
}
.span-label {
  width: 16px;
  height: 16px;
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: 2px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  fill: transparent;
}

.link-modal {
  color: var(--color-logo);
}

.button-modal-six {
  display: block;
  margin: 0 auto;
  min-width: 169px;
  height: 56px;
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #ffffff;
  cursor: pointer;
  background-color: #4d5ae5;
  border: none;
  border-radius: 4px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.button-modal-six:focus,
.button-modal-six:hover {
  background-color: #404bbf;
  border: none;
  fill: #ffffff;
}

.modal-check:checked + .label-modal-five span {
  background-color: #404bbf;
  border: none;
  fill: #f4f4fd;
}

@media (min-resolution: 192dpi) {
  .section-hero {
    background-image: linear-gradient(
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url(../images/people-office-mobile@2x.jpg);
  }
}
/* ... */

